test/libsolidity/syntaxTests/storageLayoutSpecifier/duplicated_layout_definition.sol
contract C layout at 0x1234 is A, B layout at 0xABC { }
// ----
// ParserError 8714: (36-42): Storage layout was already defined previously.
